--- a/.envRemotebackup
+++ b/.envRemotebackup
@@ -1,9 +1,9 @@
-APP_NAME=HITCOM
+APP_NAME=ubei
 APP_ENV=production
 MIX_APP_ENV=production
 APP_KEY=base64:x8HIwuMNi0LQ3g2dpfDZNP5z8xB4RTO6LDiPOMCSWJk=
 APP_DEBUG=true
-APP_URL=https://hitcom.com.tn/
+APP_URL=https://ubei.com.tn/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,14 +12,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hxynpjkf_hitcom
-DB_USERNAME=hxynpjkf_hitcom
-DB_PASSWORD=6SuVU?QgM[82
+DB_DATABASE=rlbufmvu_app-test
+DB_USERNAME=rlbufmvu_app-test
+DB_PASSWORD=ei5rDf[h+g3k
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=database
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -30,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.hitcom.com.tn
+MAIL_HOST=mail.psexpress.com.tn
 MAIL_PORT=465
-MAIL_USERNAME=admin@hitcom.com.tn
-MAIL_PASSWORD=Westpointn66!!
+MAIL_USERNAME=admin@psexpress.com.tn
+MAIL_PASSWORD=Vlx=).9Yhxoy
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=admin@hitcom.com.tn
+MAIL_FROM_ADDRESS=admin@psexpress.com.tn
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
